correction contraste

--- a/style.css
+++ b/style.css
@@ -788,12 +788,12 @@ h4 {
 
 .btn-atomic-tangerine {
     background: #F3976C;
-    color: #FFFFFF;
+    color: #000000;
 }
 
 .btn-atomic-tangerine:hover {
     background: #c27956;
-    color: #FFFFFF;
+    color: #000000;
 }
 
 .ltc-white {
